--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="assets/stylesheets/mfluid.css">
     <title>Title</title>
   </head>
   <body>
+    <div class="container" role="main">
+      <div class="c1">
+      </div>
+      <div class="c2">
+      </div>
+      <div class="c3">
+      </div>
+      <div class="c4">
+      </div>
+      <div class="c5">
+      </div>
+    </div>
   </body>
 </html>
